// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error slot 1`] = `
<div role="feed" class="zv-list">
  <div class="zv-list__error-text">Custom Error</div>
  <div class="zv-list__placeholder"></div>
</div>
`;

exports[`finished slot 1`] = `
<div role="feed" class="zv-list">
  <div class="zv-list__finished-text">Custom Finished</div>
  <div class="zv-list__placeholder"></div>
</div>
`;
